# fastpay

./: Cargo.toml
fastpay/: Cargo.toml
fastpay/src/: bench.rs  config.rs
fastpay_core/: Cargo.toml
fastpay_core/src/: authority.rs  base_types.rs  client.rs  downloader.rs  error.rs  fastpay_smart_contract.rs  generate_format.rs  serialize.rs
fastpay_core/src/unit_tests/: authority_tests.rs  base_types_tests.rs
fastpay_core/tests/: format.rs
fastpay_core/tests/staged/: fastpay.yaml
